fixing layout issue in the minimum breakpoint

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000FB;
-	background-color: #6F2E02;
+	color: #0000EF;
+	background-color: #68C430;
 }
 
 .js body
@@ -202,17 +202,17 @@
 #u5643-25
 {
 	z-index: 91;
-	position: relative;
 	background-color: transparent;
 	min-height: 119px;
+	position: relative;
 }
 
 #u5644-30
 {
 	z-index: 116;
-	position: relative;
 	background-color: transparent;
 	min-height: 107px;
+	position: relative;
 }
 
 #u5644-7
@@ -4255,37 +4255,22 @@
 		position: relative;
 	}
 
-	#pu5643-25
-	{
-		width: 0.01px;
-		margin-left: 20px;
-		margin-top: 1px;
-	}
-
-	#u5643-25
-	{
-		width: 280px;
-		text-align: justify;
-		margin-right: -10000px;
-	}
-
-	#u5644-30
-	{
-		width: 280px;
-		text-align: justify;
-		margin-right: -10000px;
-		margin-top: 291px;
-	}
-
 	#u18219
 	{
 		z-index: 339;
 		width: 29px;
 		background-color: transparent;
+		margin-left: 144px;
+		margin-top: 23px;
 		position: relative;
-		margin-right: -10000px;
-		margin-top: 271px;
-		left: 124px;
+	}
+
+	#u5643-25,#u5644-30
+	{
+		width: 280px;
+		text-align: justify;
+		margin-left: 20px;
+		margin-top: 1px;
 	}
 
 	#u5764-4
@@ -4411,7 +4396,7 @@
 	{
 		width: 0.01px;
 		margin-left: -147px;
-		margin-top: -3px;
+		margin-top: 17px;
 	}
 
 	#u5741-4
@@ -4648,7 +4633,7 @@
 	{
 		width: 0.01px;
 		margin-left: 20px;
-		margin-top: 85px;
+		margin-top: 25px;
 	}
 
 	#gallery
